add error message + white background to ErrorPage

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -116,11 +116,21 @@ li {
 
 #error-page {
   display: flex;
-  flex-direction: column;
-  gap: 32px;
   height: 100vh;
   justify-content: center;
   align-items: center;
+}
+
+.containerError {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 30px;
 }
 
 @media (max-width: 550px) {
