synchronization in real time for post: delete/add comment show number and disappear add link follower/following

--- a/frontend/src/pages/styles/profileMe.css
+++ b/frontend/src/pages/styles/profileMe.css
@@ -141,6 +141,12 @@
   margin: 24px 0 12px 16px;
 }
 
+.followingMe:hover,
+.followerMe:hover {
+  color: #35bfd1;
+  cursor: pointer;
+}
+
 .flex {
   display: flex;
   gap: 4px;
