--- a/frontend/src/pages/styles/register.css
+++ b/frontend/src/pages/styles/register.css
@@ -3,8 +3,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
+  margin: auto;
   position: relative;
+  max-width: 550px;
   bottom: 80px;
 }
 
@@ -15,7 +17,6 @@
 
 .containerRegister > form {
   display: flex;
-  width: 550px;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
@@ -23,7 +24,6 @@
 
 .containerRegister input {
   padding: 4px 8px 4px 8px;
-  width: 550px;
   margin-bottom: 12px;
 }
 
@@ -53,6 +53,7 @@
   width: 80px;
   height: 80px;
   align-self: center;
+  margin-bottom: 8px;
 }
 .lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
@@ -130,5 +131,28 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 750px) {
+  .registerPage {
+    top: 0;
+  }
+  .containerRegister {
+    margin: 10px;
+  }
+
+  .containerRegister > form {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .containerRegister > form > div > input {
+    flex: 1;
+  }
+
+  .Register {
+    align-self: center;
   }
 }
