--- a/frontend/src/pages/styles/profileMe.css
+++ b/frontend/src/pages/styles/profileMe.css
@@ -36,17 +36,13 @@
 .bannerUserMe,
 .bannerUserEditProfileMe {
   object-fit: cover;
-  min-width: 100%;
-  max-height: 250px;
+  max-width: 100%;
+  height: 250px;
 }
 
 .avatarMe,
 .avatarEditProfileMe {
   position: relative;
-  margin-bottom: -10%;
-  bottom: 70px;
-  left: 20px;
-  width: 140px;
   border-radius: 50%;
   z-index: 2;
   border: 4px solid white;
@@ -58,9 +54,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  bottom: 50%;
-  left: 12%;
+  position: fixed;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -82,9 +76,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 24%;
-  left: 46%;
+  position: fixed;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -176,10 +168,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-
-  position: absolute;
+  position: relative;
   padding: 12px 3px 12px 3px;
-  width: 600px;
+  max-width: clamp(320px, 600px, 700px);
   background-color: white;
   border: black;
   border-radius: 16px;
@@ -190,6 +181,24 @@
 
   transform: translate(-50%, -50%);
   z-index: 3;
+}
+
+.containerWallpaperEdit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.containerProfilEdit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-bottom: -10%;
+  max-width: 140px;
+  max-height: 140px;
+  bottom: 64px;
+  flex-direction: column;
 }
 
 .topBannerEditProfilMe {
