--- a/frontend/src/pages/styles/profileMe.css
+++ b/frontend/src/pages/styles/profileMe.css
@@ -50,6 +50,12 @@
   object-fit: cover;
 }
 
+.avatarMe {
+  margin-bottom: -10%;
+  bottom: 80px;
+  left: 15px;
+}
+
 .labelFileAvatar {
   display: flex;
   justify-content: center;
@@ -178,7 +184,6 @@
   left: 50%;
   right: auto;
   bottom: auto;
-
   transform: translate(-50%, -50%);
   z-index: 3;
 }
@@ -195,9 +200,10 @@
   align-items: center;
   position: relative;
   margin-bottom: -10%;
+  bottom: 80px;
+  left: 15px;
   max-width: 140px;
   max-height: 140px;
-  bottom: 64px;
   flex-direction: column;
 }
 
