--- a/frontend/src/pages/styles/home.css
+++ b/frontend/src/pages/styles/home.css
@@ -9,6 +9,7 @@ main {
   min-height: 100vh;
   border-left: 1px solid rgb(197, 197, 197);
   border-right: 1px solid rgb(197, 197, 197);
+  flex: 3;
 }
 
 .secondaryMenu {
